--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -67,11 +67,12 @@ resolver 127.0.0.11 valid=30s;
 server {
     listen 80;
     server_name cemos2028.site www.cemos2028.site;
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        try_files $uri =404;
+
+    location / {
+        proxy_pass http://cemos2028_backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
-    return 301 https://$host$request_uri;
 }
 
 # 🔹 HTTPS - produção
