--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST=db
       - DJANGO_SUPERUSER_USERNAME=admin
-      - DJANGO_SUPERUSER_PASSWORD=admin123
+      - DJANGO_SUPERUSER_PASSWORD=@cemos2028
       - DJANGO_SUPERUSER_EMAIL=admin@example.com
     depends_on:
       db:
