--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,7 +62,7 @@ upstream backend_upstream {
 
 resolver 127.0.0.11 valid=30s;
 
-# 🔹 HTTP - redireciona tudo para HTTPS
+# 🔹 HTTP - redireciona tudo para HTTPS z
 server {
     listen 80;
     server_name cemos2028.com www.cemos2028.com auditapro.com www.auditapro.com;
