--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,7 +65,7 @@ resolver 127.0.0.11 valid=30s;
 # 🔹 HTTP - redireciona tudo para HTTPS
 server {
     listen 80;
-    server_name cemos2028.com www.cemos2028.com auditapro.com www.auditapro.com;
+    server_name cemos2028.com www.cemos2028.com auditapro.com.br www.auditapro.com.br;
     return 301 https://$host$request_uri;
 }
 
@@ -141,21 +141,55 @@ server {
     ssl_certificate /etc/letsencrypt/live/auditapro.com.br/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/auditapro.com.br/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     # FRONTEND 2
     location / {
         root /usr/share/nginx/audita;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
     # MESMA API DJANGO
     location /api/ {
         proxy_pass http://backend_upstream;
-        include proxy_params;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # ADMIN
     location /admin {
         proxy_pass http://backend_upstream;
-        include proxy_params;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # DJANGO STATIC FILES
+    location /static/ {
+        alias /static/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # MEDIA / DOCUMENTS
+    location /arquivos/ {
+        alias /var/www/arquivos/;
+        autoindex off;
+        expires 30d;
+        add_header Cache-Control "public, max-age=31536000";
+        add_header Access-Control-Allow-Origin *;
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
+    gzip_min_length 256;
 }
