--- a/frontend-cemos/package.json
+++ b/frontend-cemos/package.json
@@ -34,6 +34,9 @@
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@types/marked": "^5.0.2",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.4",
     "marked": "^16.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
