--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,6 +7,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Migrations
+*/migrations/*
+!*/migrations/__init__.py
+
 # Static files
 static/
 staticfiles/
