--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,9 +7,11 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Migrations
-*/migrations/*
-!*/migrations/__init__.py
+# Migrations - Ignora todos os arquivos de migrations, exceto __init__.py
+**/migrations/*.py
+!**/migrations/__init__.py
+**/migrations/*.pyc
+**/migrations/__pycache__/
 
 # Static files
 static/
