--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,7 +9,7 @@ services:
         python manage.py makemigrations --noinput &&
         python manage.py migrate --noinput &&
         python manage.py collectstatic --noinput &&
-        gunicorn django_cemos2028.wsgi:application --bind 0.0.0.0:8000 --workers 4 --threads 2
+        gunicorn django_cemos2028.wsgi:application --bind 0.0.0.0:8000 --reload
       "
     volumes:
       - ./backend:/app
@@ -22,6 +22,7 @@ services:
       - DJANGO_SUPERUSER_USERNAME=admin
       - DJANGO_SUPERUSER_PASSWORD=@cemos2028
       - DJANGO_SUPERUSER_EMAIL=admin@example.com
+      - DEBUG=True
     depends_on:
       db:
         condition: service_healthy
@@ -62,7 +63,7 @@ services:
     networks:
       - app_network
 
-  # 🔹 Nginx reverso principal com proxy para Django e servindo Angular (PRODUÇÃO)
+  # 🔹 Nginx para desenvolvimento (HTTP simples, sem SSL)
   nginx:
     image: nginx:latest
     container_name: cemos2028_nginx
@@ -71,16 +72,15 @@ services:
       - backend
     ports:
       - "80:80"
-      - "443:443"
+      - "8088:8088"
+      - "8089:8089"
     volumes:
       # FRONTEND 1 – CEMOS2028    
       - ./frontend-cemos/dist/frontend/browser:/usr/share/nginx/cemos2028
       # FRONTEND 2 – AUDITAPRO
       - ./frontend-audita/dist/frontend/browser:/usr/share/nginx/audita
-      # NGINX CONFIG - PRODUÇÃO (HTTPS/SSL)
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      # SSL
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      # NGINX CONFIG - DESENVOLVIMENTO
+      - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf:ro
       # DJANGO STATIC
       - static_volume:/static
     networks:
