--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,6 +60,10 @@ upstream backend_upstream {
     server cemos2028_backend:8000 max_fails=3 fail_timeout=30s;
 }
 
+upstream dash_upstream {
+    server cemos2028_dash:8050 max_fails=3 fail_timeout=30s;
+}
+
 resolver 127.0.0.11 valid=30s;
 
 # 🔹 HTTP - redireciona tudo para HTTPS
@@ -95,64 +99,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # ADMIN
-    location /admin {
-        proxy_pass http://backend_upstream;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # DJANGO STATIC FILES
-    location /static/ {
-        alias /static/;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-    }
-
-    # MEDIA / DOCUMENTS
-    location /arquivos/ {
-        alias /var/www/arquivos/;
-        autoindex off;
-        expires 30d;
-        add_header Cache-Control "public, max-age=31536000";
-        add_header Access-Control-Allow-Origin *;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
-    gzip_min_length 256;
-}
-
-
-############################
-# AUDITAPRO.COM
-############################
-server {
-    listen 443 ssl;
-    server_name auditapro.com.br www.auditapro.com.br;
-
-    ssl_certificate /etc/letsencrypt/live/auditapro.com.br/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/auditapro.com.br/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
-    # FRONTEND 2
-    location / {
-        root /usr/share/nginx/audita;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-    }
-
-    # MESMA API DJANGO
-    location /api/ {
-        proxy_pass http://backend_upstream;
+    # DASH (Plotly) via rota /dash/
+    location /dash/ {
+        rewrite ^/dash/(.*)$ /$1 break;
+        proxy_pass http://dash_upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -193,3 +143,67 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
 }
+
+
+# ############################
+# # AUDITAPRO.COM
+# ############################
+# server {
+#     listen 443 ssl;
+#     server_name auditapro.com.br www.auditapro.com.br;
+
+#     ssl_certificate /etc/letsencrypt/live/auditapro.com.br/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/auditapro.com.br/privkey.pem;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers HIGH:!aNULL:!MD5;
+
+#     # FRONTEND 2
+#     location / {
+#         root /usr/share/nginx/audita;
+#         index index.html;
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     # MESMA API DJANGO
+#     location /api/ {
+#         proxy_pass http://backend_upstream;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     # ADMIN
+#     location /admin {
+#         proxy_pass http://backend_upstream;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     # DJANGO STATIC FILES
+#     location /static/ {
+#         alias /static/;
+#         expires 30d;
+#         add_header Cache-Control "public, no-transform";
+#     }
+
+#     # MEDIA / DOCUMENTS
+#     location /arquivos/ {
+#         alias /var/www/arquivos/;
+#         autoindex off;
+#         expires 30d;
+#         add_header Cache-Control "public, max-age=31536000";
+#         add_header Access-Control-Allow-Origin *;
+#     }
+
+#     error_page 500 502 503 504 /50x.html;
+#     location = /50x.html {
+#         root /usr/share/nginx/html;
+#     }
+
+#     gzip on;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
+#     gzip_min_length 256;
+# }
