--- a/frontend-cemos/package.json
+++ b/frontend-cemos/package.json
@@ -43,6 +43,7 @@
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.4",
     "marked": "^16.4.0",
+    "pdfjs-dist": "^5.4.624",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
