--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -1,12 +1,14 @@
 upstream backend_upstream {
-    server cemos2028_backend:8000 max_fails=3 fail_timeout=30s;
+    zone backend_upstream 64k;
+    server cemos2028_backend:8000 resolve max_fails=3 fail_timeout=30s;
 }
 
 upstream dash_upstream {
-    server cemos2028_dash:8050 max_fails=3 fail_timeout=30s;
+    zone dash_upstream 64k;
+    server cemos2028_dash:8050 resolve max_fails=3 fail_timeout=30s;
 }
 
-resolver 127.0.0.11 valid=30s;
+resolver 127.0.0.11 ipv6=off valid=30s;
 
 # 🔹 HTTP server - para desenvolvimento local
 server {
